Zavedeni prihlaseni pres loginName, dalsi polozky v JWT api/users castecne zprovozneno
